// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-button #render should render danger accent button 1`] = `
<gux-button accent="danger">
  <mock:shadow-root>
    <button class="gux-danger" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Danger accent
</gux-button>
`;

exports[`gux-button #render should render default button 1`] = `
<gux-button>
  <mock:shadow-root>
    <button class="gux-secondary" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Button
</gux-button>
`;

exports[`gux-button #render should render disabled danger accent button 1`] = `
<gux-button accent="danger" disabled="">
  <mock:shadow-root>
    <button class="gux-danger" disabled="" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Danger accent
</gux-button>
`;

exports[`gux-button #render should render disabled default button 1`] = `
<gux-button disabled="">
  <mock:shadow-root>
    <button class="gux-secondary" disabled="" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Button
</gux-button>
`;

exports[`gux-button #render should render disabled ghost button 1`] = `
<gux-button accent="ghost" disabled="">
  <mock:shadow-root>
    <button class="gux-ghost" disabled="" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Button
</gux-button>
`;

exports[`gux-button #render should render disabled invalid accent button 1`] = `
<gux-button accent="invalid" disabled="">
  <mock:shadow-root>
    <button class="gux-invalid" disabled="" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Invalid accent
</gux-button>
`;

exports[`gux-button #render should render disabled primary button 1`] = `
<gux-button accent="primary" disabled="">
  <mock:shadow-root>
    <button class="gux-primary" disabled="" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Button
</gux-button>
`;

exports[`gux-button #render should render disabled secondary button 1`] = `
<gux-button accent="secondary" disabled="">
  <mock:shadow-root>
    <button class="gux-secondary" disabled="" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Button
</gux-button>
`;

exports[`gux-button #render should render disabled tertiary button 1`] = `
<gux-button accent="tertiary" disabled="">
  <mock:shadow-root>
    <button class="gux-tertiary" disabled="" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Button
</gux-button>
`;

exports[`gux-button #render should render ghost button 1`] = `
<gux-button accent="ghost">
  <mock:shadow-root>
    <button class="gux-ghost" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Button
</gux-button>
`;

exports[`gux-button #render should render invalid accent button 1`] = `
<gux-button accent="invalid">
  <mock:shadow-root>
    <button class="gux-invalid" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Invalid accent
</gux-button>
`;

exports[`gux-button #render should render primary button 1`] = `
<gux-button accent="primary">
  <mock:shadow-root>
    <button class="gux-primary" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Button
</gux-button>
`;

exports[`gux-button #render should render secondary button 1`] = `
<gux-button accent="secondary">
  <mock:shadow-root>
    <button class="gux-secondary" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Button
</gux-button>
`;

exports[`gux-button #render should render tertiary button 1`] = `
<gux-button accent="tertiary">
  <mock:shadow-root>
    <button class="gux-tertiary" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Button
</gux-button>
`;
